# SuperAppStore

./: .gitignore  README.md  SuperAppStore.iss  debug.py  main.py  pyproject.toml  python-package.yml  win.py
.github/workflows/: python-package-pyinstaller.yml  python-package.yml
app/common/: config.py  icon.py  setting.py  signal_bus.py  style_sheet.py
app/resource/: resource.qrc
app/resource/i18n/: app.zh_CN.qm  app.zh_CN.ts  app.zh_HK.qm  app.zh_HK.ts
app/resource/qss/dark/: setting_interface.qss
app/utils/: notification.py  update.py
app/view/: application_interface.py  custom_interface.py  download_interface.py  home_interface.py  main_window.py  register_window.py  setting_interface.py
