[tool.uv]
required-environments = [ "sys_platform == 'win32'" ]

[project]
name = "superappstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altgraph==0.17.4",
    "darkdetect==0.8.0",
    "nuitka>=2.7.12",
    "packaging==25.0",
    "pefile==2023.2.7",
    "pyinstaller>=6.14.2",
    "pyinstaller-hooks-contrib==2025.5",
    "pyqt-fluent-widgets==1.8.3",
    "pyqt5==5.15.11",
    "pyqt5-frameless-window==0.7.3",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "pywin32==310",
    "pywin32-ctypes==0.2.3",
    "requests>=2.32.4",
    "setuptools==80.9.0",
]

